--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "code_tutor_frontend1",
+  "name": "code_tutor_frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
